feat: 🎸 new pagination feature
