# src/modules/buildings/dto/index.ts
@@ -1,2 +1,4 @@
 export { QueryBuildingsDto } from './query-buildings.dto';
 export { BuildingResponseDto } from './building-response.dto';
+export { QueryBuildingsPaginatedDto } from './query-buildings-paginated.dto';
+export { BuildingsPaginatedResponseDto } from './buildings-paginated-response.dto';
